Bug 917798 - Handlify JS exception APIs r=terrence r=bz